изменено:      12-02.md 	новый файл:    img/2022-12-27_17-43.png

--- a/12-02.md
+++ b/12-02.md
@@ -53,6 +53,7 @@ ALTER USER 'sys_test'@'localhost' IDENTIFIED WITH mysql_native_password BY 'pass
 Название таблицы | Название первичного ключа
 customer         | customer_id
 ```
+![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2022-12-27_17-43.png)
 
 
 ## Дополнительные задания (со звёздочкой*)
