--- a/12-02.md
+++ b/12-02.md
@@ -1,15 +1,4 @@
-# Домашнее задание к занятию 12.2. «Работа с данными (DDL/DML)»
-
-**Домашнее задание выполните в Google Docs или в md-файле в вашем репозитории GitHub.** 
-
-Для оформления вашего решения в GitHub можете воспользоваться [шаблоном](https://github.com/netology-code/sys-pattern-homework).
-
-Название файла Google Docs должно содержать номер лекции и фамилию студента. Пример названия: «12.2. Работа с данными (DDL/DML) — Александр Александров».
-
-Перед тем как выслать ссылку, убедитесь, что её содержимое не является приватным, то есть открыто на просмотр всем, у кого есть ссылка. Если необходимо прикрепить дополнительные ссылки, просто добавьте их в свой Google Docs.
-
-Любые вопросы по решению задач задавайте в чате учебной группы.
-
+# Домашнее задание к занятию «12.2. Работа с данными (DDL/DML) — Александр Шубин».
 
 ---
 
