--- a/8.2 Что такое DevOps. CI-CD.md
+++ b/8.2 Что такое DevOps. CI-CD.md
@@ -1,6 +1,23 @@
 # Домашнее задание к занятию "`8.1 Git`" - `Васильев Николай`
 
 
-### Задание 1
+## Задание 1
 
-![img](https://github.com/nikolai-vasilyev/Virtualization-Automation-and-CI-CD/blob/main/img/Снимок%20экрана_20230106_013811.png)
+![img](/img/Снимок%20экрана_20230106_013952.png)
+![img](/img/Снимок%20экрана_20230106_014009.png)
+![img](/img/Снимок%20экрана_20230106_014038.png)
+![img](/img/Снимок%20экрана_20230106_014155.png)
+![img](/img/Снимок%20экрана_20230106_020823.png)
+
+## Задание 2
+
+![img](/img/Снимок%20экрана_20230106_013811.png)
+![img](/img/Снимок%20экрана_20230106_013847.png)
+![img](/img/Снимок%20экрана_20230106_013911.png)
+
+## Задание 3
+
+![img](/img/Снимок%20экрана_20230106_020952.png)
+![img](/img/Снимок%20экрана_20230106_021005.png)
+![img](/img/Снимок%20экрана_20230106_021017.png)
+![img](/img/Снимок%20экрана_20230106_021041.png)
