Update 8.2 Что такое DevOps. CI-CD.md

--- a/8.2 Что такое DevOps. CI-CD.md
+++ b/8.2 Что такое DevOps. CI-CD.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию "`8.1 Git`" - `Васильев Николай`
+# Домашнее задание к занятию "`8.2 Что такое DevOps. CI/CD`" - `Васильев Николай`
 
 
 ## Задание 1
