изменено:      12-06.md 	новый файл:    img/2023-01-09_11-25-00.png 	новый файл:    img/2023-01-09_11-25-26.png 	новый файл:    img/2023-01-09_11-25-53.png 	новый файл:    img/2023-01-09_11-28-09.png

--- a/12-06.md
+++ b/12-06.md
@@ -30,4 +30,10 @@ Master-Master репликации – это настройка обычной 
 ### Задание 3*
 Выполните конфигурацию master-master репликации. Произведите проверку.
 
+![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-09_11-25-00.png)
+![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-09_11-25-26.png)
+![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-09_11-25-53.png)
+![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-09_11-28-09.png)
+
+
 Приложите скриншоты конфигурации, выполнения работы: состояния и режимы работы серверов.
