--- a/12-06.md
+++ b/12-06.md
@@ -7,12 +7,12 @@
 ### Задание 1
 На лекции рассматривались режимы репликации master-slave, master-master, опишите их различия.
 
-####Репликация master-slave:
+Репликация master-slave:
 Репликация бывает двух подходов: покомандная и потоковая.
 Покомандная репликация  —  в журнал master протоколируются запросы изменения данных (INSERT, UPDATE, DELETE), на slaveповторяются.
 Построчной репликации в журнале запишутся изменения данных, тоже произойдет и на slave.
  
-####Репликация Master-Master:
+Репликация Master-Master:
 Репликация master-master позволяет копировать данные с одного сервера на другой. Эта конфигурация добавляет избыточность и повышает эффективность при обращении к данным.
 Master-Master репликации – это настройка обычной Master-Slave репликации, только в обе стороны (каждый сервер является мастером и слейвом одновременно).
 
