--- a/12-04.md
+++ b/12-04.md
@@ -8,6 +8,7 @@
 - город нахождения магазина;
 - количество пользователей, закреплённых в этом магазине.
 
+''' sql
 select
 s.store_id, count(c.customer_id ) as "Количество пользователей", s2.first_name, s2.last_name, c2.city
 from
@@ -19,7 +20,7 @@ join city c2 on c2.city_id =a.city_id
 group by s.store_id, s2.first_name, s2.last_name, c2.city
 having
 count(c.customer_id) > 300
-
+'''
 ![задание 1](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-10_11-24.png)
 
 
