изменено:      12-03.md 	изменено:      12-04.md

--- a/12-04.md
+++ b/12-04.md
@@ -27,22 +27,24 @@ count(c.customer_id) > 300
 ### Задание 2
 Получите количество фильмов, продолжительность которых больше средней продолжительности всех фильмов.
 
+``` sql
 select count(`length`) film_id 
 from film f 
 where `length` > (select AVG(`length`) from film)
-
+```
 ![задание 2](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-10_11-24_1.png)
 
 
 ### Задание 3
 Получите информацию, за какой месяц была получена наибольшая сумма платежей, и добавьте информацию по количеству аренд за этот месяц.
 
+``` sql
 select month (payment_date), count(rental_id), sum(amount) 
 from payment p 
 group by month (payment_date) 
 order by sum(amount) desc
 limit 1
-
+```
 ![задание 3](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-10_11-24_2.png)
 
 ## Дополнительные задания (со звёздочкой*)
@@ -51,6 +53,7 @@ limit 1
 ### Задание 4*
 Посчитайте количество продаж, выполненных каждым продавцом. Добавьте вычисляемую колонку «Премия». Если количество продаж превышает 8000, то значение в колонке будет «Да», иначе должно быть значение «Нет».
 
+```sql
 select
 p.staff_id, s.first_name, count(p.payment_id) as "Количество продаж",
 case
@@ -63,12 +66,13 @@ payment p
 join staff s on s.staff_id = p.staff_id
 group by
 p.staff_id, s.first_name
-
+```
 ![задание 4](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-10_11-25.png)
 
 ### Задание 5*
 Найдите фильмы, которые ни разу не брали в аренду.
 
+```sql
 select
 f.title as "Название фильма", count(r.rental_id) as "Количество аренд"
 from
@@ -82,7 +86,5 @@ f.title
 having count(r.rental_id) = 0
 order by
 f.title
-
+```
 ![задание 5](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-10_11-25_1.png)
-
-
