--- a/12-6-psa.md
+++ b/12-6-psa.md
@@ -29,9 +29,13 @@ master-master, опишите их различия.
 
 Ответить в свободной форме.
 
+
 Ответ:
-М-С синхронн
-М-М 
+М-С - слейв читает с мастера и пишет данные на себя (наиболее часто используемо>
+М-М - опасный момент сплит брейн (обрыв связи, разделение), редко используемое >
+В этом варианте и запись и чтение происходит в обе стороны
+
+
 ---
 
 ### Задание 2
