--- a/12-6-psa.md
+++ b/12-6-psa.md
@@ -29,7 +29,6 @@ master-master, опишите их различия.
 
 Ответить в свободной форме.
 
-
 Ответ:
 М-С - слейв читает с мастера и пишет данные на себя (наиболее часто используемо>
 М-М - опасный момент сплит брейн (обрыв связи, разделение), редко используемое >
@@ -44,23 +43,13 @@ master-master, опишите их различия.
 Приложите скриншоты конфигурации, выполнения работы: состояния и режимы работы серверов.
 `Приведите ответ в свободной форме........`
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 2](ссылка на скриншот 2)`
+мастер конфиг 01 ![master-conf-01](https://user-images.githubusercontent.com/62944948/212097049-b4522b97-eaeb-4bff-b5d9-85c87ee0041f.png)
+мастер конфиг 02 ![master-conf-02](https://user-images.githubusercontent.com/62944948/212097076-ae7f98de-11bf-46f0-9b36-ec73ae79caeb.png)
+мастер работает ![master-work-01](https://user-images.githubusercontent.com/62944948/212097105-4f8e992d-7d88-4f33-adae-dc8d64e8588b.png)
+реплика конфиг 01 ![rep-conf-01](https://user-images.githubusercontent.com/62944948/212097149-b0fb73c6-94cd-4403-a563-b323cfeac33e.png)
+реплика конфиг 02 ![rep-conf-02](https://user-images.githubusercontent.com/62944948/212097181-3edc9ecb-441f-4f3f-a5e1-ba0e5fda3535.png)
+реплика работает ![rep-work](https://user-images.githubusercontent.com/62944948/212096580-0a43da9a-dd8b-49d1-a93f-4466d8a6d953.png)
+реплика работает 02 ![rep-work-02](https://user-images.githubusercontent.com/62944948/212096784-bf79688d-6bc4-484b-a9bf-23f6e74560d8.png)
 
 
 ---
