--- a/12-6-psa.md
+++ b/12-6-psa.md
@@ -1,6 +1,4 @@
-# Домашнее задание к занятию "`Название занятия`" - `Фамилия и имя студента`
-Домашнее задание к занятию 12.6. «Репликация и масштабирование. Часть 1»
-Прытков Сергей
+# Домашнее задание к занятию 12.6. «Репликация и масштабирование. Часть 1» Прытков Сергей
 
 ### Инструкция по выполнению домашнего задания
 
