изменено:      12-07.md 	новый файл:    img/2023-01-13_10-42.png 	новый файл:    img/2023-01-13_10-43.png

--- a/12-07.md
+++ b/12-07.md
@@ -25,6 +25,15 @@
 
 Опишите принципы построения системы и их разграничение или (и) разбивку между базами данных.
 
+Вертикальный шардинг:
+
+![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-13_10-42.png)
+
+Горизонтальный шардинг:
+
+![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-13_10-42.png)
+
+
 *Пришлите блок схему, где и что будет располагатся. Опишите, в каких режимах будут работать сервера.* 
 
 
@@ -37,9 +46,5 @@
 Выполните настройку выбранных методов шардинга из задания 2.
 
 *Пришлите конфиг docker и sql скрипт с командами для базы данных*
-
-
-![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-09_11-28-09.png)
-
 
 Приложите скриншоты конфигурации, выполнения работы: состояния и режимы работы серверов.
