--- a/12-6-psa.md
+++ b/12-6-psa.md
@@ -59,3 +59,20 @@ master-master, опишите их различия.
 ---
 rpm --import https://repo.mysql.com/RPM-GPG-KEY-mysql-2022
 
+как делал
+--
+Установка мускул
+https://www.digitalocean.com/community/tutorials/how-to-set-up-replication-in-mysql
+Репликация
+https://timeweb.cloud/tutorials/mysql/kak-nastroit-replikatsiyu-v-mysql
+Удаление ошибки
+https://ahelpme.com/software/mysql/mysql-slave-upgrade-slave-failed-to-initialize-relay-log-info-structure-from-the-repository/
+
+
+
+
+
+
+
+
+
