--- a/Monitoring and fault tolerance/9.2 Zabbix.md
+++ b/Monitoring and fault tolerance/9.2 Zabbix.md
@@ -10,5 +10,24 @@
 ![img](/img/Снимок%20экрана_20230106_204702.png)
 
 ````
+#!/bin/bash
+
+USER_NAME=root
+
+NAME=$(id -nu)
+if [ "$NAME" != "$USER_NAME" ]; then
+ echo "Для запуска нужны права суперпользователя (root)"
+ exit 1
+fi
+
+apt update && apt upgrade -y
+apt install postgresql -y
+wget https://repo.zabbix.com/zabbix/6.0/debian/pool/main/z/zabbix-release/zabbix-release_6.0-4%2Bdebian11_all.deb
+dpkg -i zabbix-release_6.0-4+debian11_all.deb
+apt update
+apt install zabbix-server-pgsql zabbix-frontend-php php7.4-pgsql zabbix-nginx-conf zabbix-sql-scripts zabbix-agent
+su - postgres -c 'psql --command "CREATE USER zabbix WITH PASSWORD '\'123456789\'';"'
+su - postgres -c 'psql --command "CREATE DATABASE zabbix OWNER zabbix;"'
+
 
 ````
