--- a/Monitoring and fault tolerance/9.2 Zabbix.md
+++ b/Monitoring and fault tolerance/9.2 Zabbix.md
@@ -27,9 +27,9 @@ systemctl enable zabbix-server zabbix-agent nginx php7.4-fpm
 
 ### Задание 2
 
-![img](/img/Снимок экрана от 2023-01-15 17-32-07.png)
-![img](/img/Снимок экрана от 2023-01-15 17-33-15.png)
-![img](/img/Снимок экрана от 2023-01-15 17-36-37.png)
+![img](/img/Снимок%20экрана%20от%202023-01-15%2017-32-07.png)
+![img](/img/Снимок%20экрана%20от%202023-01-15%2017-33-15.png)
+![img](/img/Снимок%20экрана%20от%202023-01-15%2017-36-37.png)
 
 ````
 #!/bin/bash
