--- a/12-07.md
+++ b/12-07.md
@@ -4,12 +4,21 @@
 
 Опишите основные преимущества использования масштабирования методами:
 
-- активный master-сервер и пассивный репликационный slave-сервер; 
+- активный master-сервер и пассивный репликационный slave-сервер;
+- ответ 
+
 - master-сервер и несколько slave-серверов;
+- ответ более отказоустойчивое решение, есть вариант использовать синхронную и асинхронную реплику
+
 - активный сервер со специальным механизмом репликации — distributed replicated block device (DRBD);
-- SAN-кластер.
+- ответ: входит в состав ядра, распределенное 
+
+- SAN-кластер
+- ответ: удобное управление(в том числе емкостью хранилища) за счет специализированного ПО
 
 *Дайте ответ в свободной форме.*
+
+Ответ
 
 ---
 
