--- a/12-07.md
+++ b/12-07.md
@@ -14,7 +14,7 @@
 - ответ: входит в состав ядра, распределенное 
 
 - SAN-кластер
-- ответ: удобное управление(в том числе емкостью хранилища) за счет специализированного ПО
+- ### ответ: удобное управление(в том числе емкостью хранилища) за счет специализированного ПО
 
 *Дайте ответ в свободной форме.*
 
