--- a/12-05.md
+++ b/12-05.md
@@ -20,6 +20,7 @@ where date(p.payment_date) = '2005-07-30' and p.payment_date = r.rental_date and
 ```
 - перечислите узкие места:
 Использование Distinct, агрегация с группировкой по не относящемся полям c.customer_id, f.title являются лишним.
+Таблица f.title не используется
 
 - оптимизируйте запрос: внесите корректировки по использованию операторов, при необходимости добавьте индексы.
 
@@ -47,31 +48,6 @@ where date(p.payment_date) = '2005-07-30' and p.payment_date = r.rental_date and
                                     -> Covering index lookup on r using rental_date (rental_date=p.payment_date)  (cost=0.97 rows=1) (actual time=0.001..0.002 rows=1 loops=634000)
                                 -> Single-row index lookup on c using PRIMARY (customer_id=r.customer_id)  (cost=0.00 rows=1) (actual time=0.000..0.000 rows=1 loops=642000)
                             -> Single-row covering index lookup on i using PRIMARY (inventory_id=r.inventory_id)  (cost=0.00 rows=1) (actual time=0.000..0.000 rows=1 loops=642000)
-
-
-
-explain analyze
-select  concat(c.last_name, ' ', c.first_name) as pio, sum(p.amount)
-from payment p, rental r, customer c, inventory i, film f
-where date(p.payment_date) = '2005-07-30' and p.payment_date = r.rental_date and r.customer_id = c.customer_id and i.inventory_id = r.inventory_id
-group by pio
-;
-
-
--> Limit: 20000 row(s)  (actual time=3178.101..3178.230 rows=391 loops=1)
-    -> Table scan on <temporary>  (actual time=3178.099..3178.202 rows=391 loops=1)
-        -> Aggregate using temporary table  (actual time=3178.094..3178.094 rows=391 loops=1)
-            -> Nested loop inner join  (cost=22211510.36 rows=16700349) (actual time=0.346..1878.471 rows=642000 loops=1)
-                -> Nested loop inner join  (cost=20537300.33 rows=16700349) (actual time=0.342..1639.019 rows=642000 loops=1)
-                    -> Nested loop inner join  (cost=18863090.30 rows=16700349) (actual time=0.334..1360.363 rows=642000 loops=1)
-                        -> Inner hash join (no condition)  (cost=1608727.25 rows=16086000) (actual time=0.322..52.244 rows=634000 loops=1)
-                            -> Filter: (cast(p.payment_date as date) = '2005-07-30')  (cost=1.63 rows=16086) (actual time=0.036..6.607 rows=634 loops=1)
-                                -> Table scan on p  (cost=1.63 rows=16086) (actual time=0.024..4.688 rows=16044 loops=1)
-                            -> Hash
-                                -> Covering index scan on f using idx_fk_language_id  (cost=103.00 rows=1000) (actual time=0.037..0.206 rows=1000 loops=1)
-                        -> Covering index lookup on r using rental_date (rental_date=p.payment_date)  (cost=0.97 rows=1) (actual time=0.001..0.002 rows=1 loops=634000)
-                    -> Single-row index lookup on c using PRIMARY (customer_id=r.customer_id)  (cost=0.00 rows=1) (actual time=0.000..0.000 rows=1 loops=642000)
-                -> Single-row covering index lookup on i using PRIMARY (inventory_id=r.inventory_id)  (cost=0.00 rows=1) (actual time=0.000..0.000 rows=1 loops=642000)
 
                 
 explain analyze
