--- a/12-08.md
+++ b/12-08.md
@@ -8,15 +8,35 @@
 Финансовая компания решила увеличить надёжность работы баз данных и их резервного копирования. 
 
 Необходимо описать, какие варианты резервного копирования подходят в случаях: 
+Считаю что тут разумнее использовать полное копирование БД, так как данный метод создает полную копию набора исходных данных, поэтому является лучшим вариантом защиты с точки зрения управления и скорости восстановления данных. Но это метод занимает в разы больше времени, чем другие способы резервного копирования, а также создаёт значительную сетевую нагрузку
+
+ Преимущества Full Backup:
+- быстрое восстановление данных
+- простое управление
+- все данные содержаться в одной резервной копии
+
+Недостатки Full Backup:
+- требует много места для хранения резервных копий
+- высокая загрузка сети
+- длительное выполнение резервного копирования
 
 1.1. Необходимо восстанавливать данные в полном объёме за предыдущий день.
-Если хватает времени и места, делать полные резервные копии, иначе можно делать дифференциальные.
+Тут в дополнении к полному ежедневному бэкапу, добавим ежечасный инкрементальный бэкап. Инкрементное резервное копирование использует полную копию, как начальную точку. Затем выполняется резервное копирование только блоков данных, которые были изменены с момента последнего резервного задания, с заданным периодом выполнения задания. В зависимости от политики хранения резервных копии, через определенный период создается новая полная копия для повторения цикла. 
+
+Преимущества Incremental Backup:
+- высокая скорость резервного копирования (копируются только блоки изменённых данных)
+- меньше места для хранения (по сравнению с полным)
+- большее количество точек восстановления
+
+Недостатки Incremental Backup:
+- низкая скорость восстановления данных (необходимо восстановить как начальную полную копию, так и все последующие блоки)
+- менее надежна (зависит от целостности всех блоков в цепочке)
+
 
 1.2. Необходимо восстанавливать данные за час до предполагаемой поломки.
-Так же в нерабочее время делать полную копию, а в течении дня инкременты каждый час.
 
 1.3.* Возможен ли кейс, когда при поломке базы происходило моментальное переключение на работающую или починенную базу данных.
-Использовать репликацию баз данных. 
+Использовать несколько серверов БД и настроеной репликацией.
 
 *Приведите ответ в свободной форме.*
 
