--- a/Monitoring and fault tolerance/9.3 Zabbix.md
+++ b/Monitoring and fault tolerance/9.3 Zabbix.md
@@ -3,12 +3,12 @@
 
 ### Задание 1
 
-![img](/img/Снимок%20экрана_20230118_155611.png)
+![img](../img/Снимок%20экрана_20230118_155611.png)
 
 ### Задание 2-3
 
-![img](/img/Снимок%20экрана_20230118_155725.png)
+![img](../img/Снимок%20экрана_20230122_211803.png)
 
 ### Задание 4
 
-![img](/img/Снимок%20экрана_20230118_174030.png)
+![img](../img/Снимок%20экрана_20230118_174030.png)
