изменено:      11-03.md 	новый файл:    img/2023-01-27_17-32-49.png

--- a/11-03.md
+++ b/11-03.md
@@ -36,6 +36,7 @@
 
 *Приведите скриншот интерфейса Kibana, на котором видны логи Nginx, которые были отправлены через Filebeat.*
 
+![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-27_17-32-49.png)
 
 ## Дополнительные задания (со звёздочкой*)
 Эти задания дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже шире разобраться в материале.
