--- a/13-01.md
+++ b/13-01.md
@@ -65,6 +65,15 @@ https://www.exploit-db.com/exploits/46594
 Ответьте на следующие вопросы:
 
 - Чем отличаются эти режимы сканирования с точки зрения сетевого трафика?
+
+Эти сканирования имеют различия в tcp флагах установленных в пакетах запросов
+
+SYN при таком сканировании TCP соединение не устанавливается до конца
+FIN при таком  сканировании TCP соединение устанавливается до конца
+Xmas  
+UDP при таком сканировании если в ответ приходит ICMP ошибка о недостижимости порта  значит порт закрыт. 
+
+
 - Как отвечает сервер?
 
 *Приведите ответ в свободной форме.*
