--- a/Monitoring and fault tolerance/10.3 Pacemaker.md
+++ b/Monitoring and fault tolerance/10.3 Pacemaker.md
@@ -4,3 +4,18 @@
 
 ### Задание 1
 
+* Поддерживает возможность полной изоляции упавшей ноды, пока нода не отправит сообщение о своем рабочем состоянии (STONITH).
+* Не зависит от типов ресурсов: все, что можно использовать в скрипте, можно кластеризовать.
+* Не требуется общий диск.
+* Возможность задать порядок запуска ресурсов.
+* Можно конфигурировать сразу все узлы кластера.
+
+### Задание 2
+
+* Следит за состоянием приложений.
+* Информирует приложения о смене активного узла.
+* Уведомляет об изменениях в базе данных.
+* Предоставляет доступ к базе данных со статистикой и конфигурацией.
+
+### Задание 3
+
