--- a/13-01.md
+++ b/13-01.md
@@ -66,15 +66,17 @@ https://www.exploit-db.com/exploits/46594
 
 - Чем отличаются эти режимы сканирования с точки зрения сетевого трафика?
 
-Эти сканирования имеют различия в tcp флагах установленных в пакетах запросов
+**Эти сканирования имеют различия в tcp флагах установленных в пакетах запросов
 
-SYN при таком сканировании TCP соединение не устанавливается до конца
+**SYN при таком сканировании TCP соединение не устанавливается до конца
 FIN при таком  сканировании TCP соединение устанавливается до конца
-Xmas  
-UDP при таком сканировании если в ответ приходит ICMP ошибка о недостижимости порта  значит порт закрыт. 
+Xmas - устанавливаются FIN, PSH и URG
+UDP при таком сканировании если в ответ приходит ICMP ошибка о недостижимости порта  значит порт закрыт.** 
 
 
 - Как отвечает сервер?
+
+**В основном ответ идёт со флагом RST, в TCP и XMAS в дополнение к RST идёт ACK
 
 *Приведите ответ в свободной форме.*
 
@@ -93,16 +95,4 @@ UDP при таком сканировании если в ответ прихо
 
 
 
-https://www.exploit-db.com/?platform=linux
 
-https://docs.metasploit.com/docs/using-metasploit/getting-started/nightly-installers.html
-
-https://www.metasploit.com/
-
-
-
-
-
-
-
-https://codeby.net/threads/osnovy-i-priemy-skanirovanija-portov-s-nmap.67192/
