--- a/13-01.md
+++ b/13-01.md
@@ -76,7 +76,7 @@ UDP при таком сканировании если в ответ прихо
 
 - Как отвечает сервер?
 
-**В основном ответ идёт со флагом RST, в TCP и XMAS в дополнение к RST идёт ACK
+**В основном ответ идёт со флагом RST, в TCP и XMAS в дополнение к RST идёт ACK**
 
 *Приведите ответ в свободной форме.*
 
