изменено:      virt/05-virt-02.md

--- a/virt/05-virt-02.md
+++ b/virt/05-virt-02.md
@@ -19,13 +19,19 @@
 
 - VirtualBox
 
-![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-27_11-07-38.png)
+![VirtualBox](https://github.com/aleksandr-Shubin-83/homework/blob/main/virt/img/2023-02-01_16-17-51.png)
 	
 - Vagrant
 	
+![Vagrant](https://github.com/aleksandr-Shubin-83/homework/blob/main/virt/img/2023-02-01_16-33-51.png)
+
 - Terraform
+
+![Terraform](https://github.com/aleksandr-Shubin-83/homework/blob/main/virt/img/2023-02-01_16-36-08.png)
 	
 - Ansible
+
+![Ansible](https://github.com/aleksandr-Shubin-83/homework/blob/main/virt/img/2023-02-01_16-43-37.png)
 
 *Приложить вывод команд установленных версий каждой из программ, оформленный в markdown.*
 
