изменено:      virt/05-virt-02.md

--- a/virt/05-virt-02.md
+++ b/virt/05-virt-02.md
@@ -6,12 +6,24 @@
 ## Задача 1
 
 - Опишите своими словами основные преимущества применения на практике IaaC паттернов.
+
+Ценность IaaC стоит на 3 китах: цена, скорость и уменьшение рисков. Уменьшение расходов относится не только к финансовой составляющей, но и к количеству времени, затрачиваемого на рутинные операции. Принципы IaC позволяют не фокусироваться на рутине, а заниматься более важными задачами. Автоматизация инфраструктуры позволяет эффективнее использовать существующие ресурсы. Также автоматизация позволяет минимизировать риск возникновения человеческой ошибки.
+
 - Какой из принципов IaaC является основополагающим?
+
+Идемпотентность — это свойство объекта  или операции, при повторном выполнении  которой мы получаем результат идентичный  предыдущему и всем последующим  выполнениям.
 
 ## Задача 2
 
 - Чем Ansible выгодно отличается от других систем управление конфигурациями?
 - Какой, на ваш взгляд, метод работы систем конфигурации более надёжный push или pull?
+
+Ansible:
+ - не требует установки дополнительного ПО на управляемые сервера. 
+ - бесплатен
+ - идемпотентен
+
+
 
 ## Задача 3
 
@@ -43,4 +55,7 @@
 - Зайти внутрь ВМ, убедиться, что Docker установлен с помощью команды
 ```
 docker ps
+
 ```
+
+Прошу продлить срок выполнения задания, так как не сразу получилось настроить на тестовой машине vpn для доступа к  https://vagrantcloud.com/bento/
