изменено:      virt/05-virt-02.md

--- a/virt/05-virt-02.md
+++ b/virt/05-virt-02.md
@@ -23,7 +23,7 @@ Ansible:
  - бесплатен
  - идемпотентен
 
-
+Вопрос сложный и на мой взгляд не однозначный. Все таки наверное в различных ситуациях может понадобиться как один, так и другой метод. В итоге я выберу push, так как я сам инницирую процес внедрения. 
 
 ## Задача 3
 
