--- a/13-03.md
+++ b/13-03.md
@@ -10,17 +10,60 @@
 Задание 1
 Проведите разведку системы и определите, какие сетевые службы запущены на защищаемой системе:
 
-sudo nmap -sA < ip-адрес >
+sudo nmap -sA 192.168.9.131
 
-sudo nmap -sT < ip-адрес >
+![2023-02-04_09-09](https://user-images.githubusercontent.com/62944948/216752091-d94b8603-6bca-474f-b44e-0393329ed28f.png)
 
-sudo nmap -sS < ip-адрес >
 
-sudo nmap -sV < ip-адрес >
+sudo nmap -sT 192.168.9.131
+
+![2023-02-04_09-10](https://user-images.githubusercontent.com/62944948/216752122-4f9e78d9-28a8-4f4e-a0dd-b4d40ae1d24d.png)
+
+
+sudo nmap -sS 192.168.9.131
+
+![2023-02-04_09-11](https://user-images.githubusercontent.com/62944948/216752134-459e68ed-5c24-4662-bc0f-48f13248ab48.png)
+
+
+
+sudo nmap -sV 192.168.9.131
+
+![2023-02-04_09-12](https://user-images.githubusercontent.com/62944948/216752163-691b8ec0-6353-44dc-a362-75c80b3338da.png)
+
+
 
 По желанию можете поэкспериментировать с опциями: https://nmap.org/man/ru/man-briefoptions.html.
 
 В качестве ответа пришлите события, которые попали в логи Suricata и Fail2Ban, прокомментируйте результат.
+
+root@u04:~# tail -f /var/log/suricata/fast.log
+02/04/2023-09:45:19.612690  [**] [1:2010936:3] ET SCAN Suspicious inbound to Oracle SQL port 1521 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:51132 -> 192.168.9.131:1521
+02/04/2023-09:45:19.624998  [**] [1:2010935:3] ET SCAN Suspicious inbound to MSSQL port 1433 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:37848 -> 192.168.9.131:1433
+02/04/2023-09:45:26.869478  [**] [1:2010937:3] ET SCAN Suspicious inbound to mySQL port 3306 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:63705 -> 192.168.9.131:3306
+02/04/2023-09:45:26.877325  [**] [1:2010935:3] ET SCAN Suspicious inbound to MSSQL port 1433 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:63705 -> 192.168.9.131:1433
+02/04/2023-09:45:26.883435  [**] [1:2010939:3] ET SCAN Suspicious inbound to PostgreSQL port 5432 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:63705 -> 192.168.9.131:5432
+02/04/2023-09:45:26.921199  [**] [1:2010936:3] ET SCAN Suspicious inbound to Oracle SQL port 1521 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:63705 -> 192.168.9.131:1521
+02/04/2023-09:45:35.336808  [**] [1:2010937:3] ET SCAN Suspicious inbound to mySQL port 3306 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:53316 -> 192.168.9.131:3306
+02/04/2023-09:45:35.339280  [**] [1:2010939:3] ET SCAN Suspicious inbound to PostgreSQL port 5432 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:53316 -> 192.168.9.131:5432
+02/04/2023-09:45:35.367240  [**] [1:2010935:3] ET SCAN Suspicious inbound to MSSQL port 1433 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:53316 -> 192.168.9.131:1433
+02/04/2023-09:45:35.386000  [**] [1:2010936:3] ET SCAN Suspicious inbound to Oracle SQL port 1521 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:53316 -> 192.168.9.131:1521
+----
+root@u04:~# tail -f /var/log/suricata/fast.log
+02/04/2023-10:02:46.207097  [**] [1:2010937:3] ET SCAN Suspicious inbound to mySQL port 3306 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.112:40489 -> 192.168.9.131:3306
+02/04/2023-10:02:46.263784  [**] [1:2002911:6] ET SCAN Potential VNC Scan 5900-5920 [**] [Classification: Attempted Information Leak] [Priority: 2] {TCP} 192.168.9.112:40489 -> 192.168.9.131:5911
+02/04/2023-10:02:46.272825  [**] [1:2010935:3] ET SCAN Suspicious inbound to MSSQL port 1433 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.112:40489 -> 192.168.9.131:1433
+02/04/2023-10:02:46.279052  [**] [1:2010936:3] ET SCAN Suspicious inbound to Oracle SQL port 1521 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.112:40489 -> 192.168.9.131:1521
+02/04/2023-10:02:46.285666  [**] [1:2002910:6] ET SCAN Potential VNC Scan 5800-5820 [**] [Classification: Attempted Information Leak] [Priority: 2] {TCP} 192.168.9.112:40489 -> 192.168.9.131:5810
+02/04/2023-10:02:46.295779  [**] [1:2010939:3] ET SCAN Suspicious inbound to PostgreSQL port 5432 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.112:40489 -> 192.168.9.131:5432
+02/04/2023-10:02:49.714894  [**] [1:2010937:3] ET SCAN Suspicious inbound to mySQL port 3306 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.112:59517 -> 192.168.9.131:3306
+02/04/2023-10:02:49.763751  [**] [1:2010936:3] ET SCAN Suspicious inbound to Oracle SQL port 1521 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.112:59517 -> 192.168.9.131:1521
+02/04/2023-10:02:49.768956  [**] [1:2010939:3] ET SCAN Suspicious inbound to PostgreSQL port 5432 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.112:59517 -> 192.168.9.131:5432
+02/04/2023-10:02:49.786572  [**] [1:2010935:3] ET SCAN Suspicious inbound to MSSQL port 1433 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.112:59517 -> 192.168.9.131:1433
+
+--
+
+
+
 
 Задание 2
 Проведите атаку на подбор пароля для службы SSH:
@@ -36,6 +79,9 @@ hydra -L users.txt -P pass.txt < ip-адрес > ssh
 открыть файл /etc/fail2ban/jail.conf,
 найти секцию ssh,
 установить enabled в true.
+
+![2023-02-04_12-04](https://user-images.githubusercontent.com/62944948/216758800-1ca6598f-8bd0-49ee-b6cc-6ec22a99b4c7.png)
+
 Дополнительная информация по Fail2Ban:https://putty.org.ru/articles/fail2ban-ssh.html.
 
 В качестве ответа пришлите события, которые попали в логи Suricata и Fail2Ban, прокомментируйте результат.
