--- a/13-03.md
+++ b/13-03.md
@@ -36,18 +36,7 @@ sudo nmap -sV 192.168.9.131
 
 В качестве ответа пришлите события, которые попали в логи Suricata и Fail2Ban, прокомментируйте результат.
 
-root@u04:~# tail -f /var/log/suricata/fast.log
-02/04/2023-09:45:19.612690  [**] [1:2010936:3] ET SCAN Suspicious inbound to Oracle SQL port 1521 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:51132 -> 192.168.9.131:1521
-02/04/2023-09:45:19.624998  [**] [1:2010935:3] ET SCAN Suspicious inbound to MSSQL port 1433 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:37848 -> 192.168.9.131:1433
-02/04/2023-09:45:26.869478  [**] [1:2010937:3] ET SCAN Suspicious inbound to mySQL port 3306 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:63705 -> 192.168.9.131:3306
-02/04/2023-09:45:26.877325  [**] [1:2010935:3] ET SCAN Suspicious inbound to MSSQL port 1433 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:63705 -> 192.168.9.131:1433
-02/04/2023-09:45:26.883435  [**] [1:2010939:3] ET SCAN Suspicious inbound to PostgreSQL port 5432 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:63705 -> 192.168.9.131:5432
-02/04/2023-09:45:26.921199  [**] [1:2010936:3] ET SCAN Suspicious inbound to Oracle SQL port 1521 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:63705 -> 192.168.9.131:1521
-02/04/2023-09:45:35.336808  [**] [1:2010937:3] ET SCAN Suspicious inbound to mySQL port 3306 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:53316 -> 192.168.9.131:3306
-02/04/2023-09:45:35.339280  [**] [1:2010939:3] ET SCAN Suspicious inbound to PostgreSQL port 5432 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:53316 -> 192.168.9.131:5432
-02/04/2023-09:45:35.367240  [**] [1:2010935:3] ET SCAN Suspicious inbound to MSSQL port 1433 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:53316 -> 192.168.9.131:1433
-02/04/2023-09:45:35.386000  [**] [1:2010936:3] ET SCAN Suspicious inbound to Oracle SQL port 1521 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.109:53316 -> 192.168.9.131:1521
-----
+
 root@u04:~# tail -f /var/log/suricata/fast.log
 02/04/2023-10:02:46.207097  [**] [1:2010937:3] ET SCAN Suspicious inbound to mySQL port 3306 [**] [Classification: Potentially Bad Traffic] [Priority: 2] {TCP} 192.168.9.112:40489 -> 192.168.9.131:3306
 02/04/2023-10:02:46.263784  [**] [1:2002911:6] ET SCAN Potential VNC Scan 5900-5920 [**] [Classification: Attempted Information Leak] [Priority: 2] {TCP} 192.168.9.112:40489 -> 192.168.9.131:5911
@@ -64,21 +53,29 @@ root@u04:~# tail -f /var/log/suricata/fast.log
 
 
 
-
 Задание 2
 Проведите атаку на подбор пароля для службы SSH:
 
-hydra -L users.txt -P pass.txt < ip-адрес > ssh
+hydra -L users.txt -P pass.txt 192.168.9.131 ssh
 
 Настройка hydra:
 создайте два файла: users.txt и pass.txt;
 в каждой строчке первого файла должны быть имена пользователей, второго — пароли. В нашем случае это могут быть случайные строки, но ради эксперимента можете добавить имя и пароль существующего пользователя.
+
+![Screenshot_2023-02-04_12-08-32](https://user-images.githubusercontent.com/62944948/216759069-1db19e22-22ef-4b90-a85d-693b60717242.png)
+
+
 Дополнительная информация по hydra: https://kali.tools/?p=1847.
 
 Включение защиты SSH для Fail2Ban:
 открыть файл /etc/fail2ban/jail.conf,
 найти секцию ssh,
 установить enabled в true.
+
+![Screenshot_2023-02-04_12-08-32](https://user-images.githubusercontent.com/62944948/216759920-63b22198-57d0-4990-b108-2fc16a9984b6.png)
+
+![2023-02-04_12-31](https://user-images.githubusercontent.com/62944948/216759932-bccac30e-bd71-4f13-b648-98884a3261f9.png)
+
 
 ![2023-02-04_12-04](https://user-images.githubusercontent.com/62944948/216758800-1ca6598f-8bd0-49ee-b6cc-6ec22a99b4c7.png)
 
