--- a/13-03.md
+++ b/13-03.md
@@ -11,22 +11,34 @@
 Проведите разведку системы и определите, какие сетевые службы запущены на защищаемой системе:
 
 sudo nmap -sA 192.168.9.131
+Хост работает, 1000 тср портов не обработано, сброс соединения
+
 
 ![2023-02-04_09-09](https://user-images.githubusercontent.com/62944948/216752091-d94b8603-6bca-474f-b44e-0393329ed28f.png)
 
 
 sudo nmap -sT 192.168.9.131
+Хост работает, 999 тср портов закрыто, соединение закрыто 
+22/тср открыт ssh
+
 
 ![2023-02-04_09-10](https://user-images.githubusercontent.com/62944948/216752122-4f9e78d9-28a8-4f4e-a0dd-b4d40ae1d24d.png)
 
 
 sudo nmap -sS 192.168.9.131
+Хост работает, 999 тср портов закрыто, сброс соединения
+22/тср открыт ssh
+
+
 
 ![2023-02-04_09-11](https://user-images.githubusercontent.com/62944948/216752134-459e68ed-5c24-4662-bc0f-48f13248ab48.png)
 
 
-
 sudo nmap -sV 192.168.9.131
+Хост работает, 999 тср портов закрыто, сброс соединения
+22/тср открыт ssh
+показал версию OpenSSH 
+
 
 ![2023-02-04_09-12](https://user-images.githubusercontent.com/62944948/216752163-691b8ec0-6353-44dc-a362-75c80b3338da.png)
 
