--- a/13-03.md
+++ b/13-03.md
@@ -49,13 +49,12 @@ sudo nmap -sV 192.168.9.131
 показал версию OpenSSH 
 
 
-![2023-02-04_09-12](https://user-images.githubusercontent.com/62944948/216752163-691b8ec0-6353-44dc-a362-75c80b3338da.png)
-
-
 
 По желанию можете поэкспериментировать с опциями: https://nmap.org/man/ru/man-briefoptions.html.
 
 В качестве ответа пришлите события, которые попали в логи Suricata и Fail2Ban, прокомментируйте результат.
+
+**Suricata показывает событие сканирования, Fail2Ban ничего в логах не показал.**
 
 
 root@u04:~# tail -f /var/log/suricata/fast.log
