--- a/13-03.md
+++ b/13-03.md
@@ -106,3 +106,5 @@ hydra -L users.txt -P pass.txt 192.168.9.131 ssh
 Дополнительная информация по Fail2Ban:https://putty.org.ru/articles/fail2ban-ssh.html.
 
 В качестве ответа пришлите события, которые попали в логи Suricata и Fail2Ban, прокомментируйте результат.
+
+**Suricata показывает в логах событие сканирования, Fail2Ban отправил сканирующий хост в бан**
