--- a/12-08.md
+++ b/12-08.md
@@ -14,6 +14,10 @@
 
 Приведите ответ в свободной форме.
 
+**1.1 полное резервное копирование
+  1.2 инкрементное копирование
+  1.3 Сервер с репликацией и высокой доступностью HA **
+
 Задание 2. PostgreSQL
 2.1. С помощью официальной документации приведите пример команды резервирования данных и восстановления БД (pgdump/pgrestore).
 
