--- a/12-08.md
+++ b/12-08.md
@@ -14,9 +14,9 @@
 
 Приведите ответ в свободной форме.
 
-**1.1 полное резервное копирование
-  1.2 инкрементное копирование
-  1.3 Сервер с репликацией и высокой доступностью HA **
+**1.1 Diff Backup дифиреницальное резервное копирование, или полное.
+  1.2 incremental backup инкрементное копирование
+  1.3 Сервер с репликацией master-slave**
 
 Задание 2. PostgreSQL
 2.1. С помощью официальной документации приведите пример команды резервирования данных и восстановления БД (pgdump/pgrestore).
@@ -25,6 +25,11 @@
 
 Приведите ответ в свободной форме.
 
+**2.1 - 
+
+
+**2.2 - написать скрипт резервного копирования**
+
 Задание 3. MySQL
 3.1. С помощью официальной документации приведите пример команды инкрементного резервного копирования базы данных MySQL.
 
@@ -32,4 +37,4 @@
 
 Приведите ответ в свободной форме.
 
-Задания, помеченные звёздочкой, — дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже шире разобраться в материале.
+
