--- a/12-08.md
+++ b/12-08.md
@@ -25,10 +25,22 @@
 
 Приведите ответ в свободной форме.
 
-**2.1 - 
+**2.1  
+  
+  **pg_dump -Fc dbname > filename
 
+  **pg_restore -d dbname filename
 
-**2.2 - написать скрипт резервного копирования**
+**2.2 - написать скрипт резервного копирования
+#!/bin/sh
+PATH=/etc:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
+
+**PGPASSWORD=password
+export PGPASSWORD
+pathB=/backup
+dbUser=dbuser
+database=db
+**
 
 Задание 3. MySQL
 3.1. С помощью официальной документации приведите пример команды инкрементного резервного копирования базы данных MySQL.
