--- a/12-08.md
+++ b/12-08.md
@@ -32,10 +32,11 @@
   **pg_restore -d dbname filename
 
 **2.2 - написать скрипт резервного копирования
-#!/bin/sh
-PATH=/etc:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
 
-**PGPASSWORD=password
+
+**#!/bin/sh
+PATH=/etc:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
+PGPASSWORD=password
 export PGPASSWORD
 pathB=/backup
 dbUser=dbuser
