--- a/12-08.md
+++ b/12-08.md
@@ -34,14 +34,15 @@
 **2.2 - написать скрипт резервного копирования
 
 
-**#!/bin/sh
+---
+#!/bin/sh
 PATH=/etc:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
 PGPASSWORD=password
 export PGPASSWORD
 pathB=/backup
 dbUser=dbuser
 database=db
-**
+---
 
 Задание 3. MySQL
 3.1. С помощью официальной документации приведите пример команды инкрементного резервного копирования базы данных MySQL.
