--- a/12-08.md
+++ b/12-08.md
@@ -32,9 +32,9 @@
   **pg_restore -d dbname filename
 
 
+**2.2 - написать скрипт резервного копирования**
 
---
-**2.2 - написать скрипт резервного копирования
+
 #!/bin/sh
 PATH=/etc:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
 PGPASSWORD=password
@@ -42,7 +42,6 @@ export PGPASSWORD
 pathB=/backup
 dbUser=dbuser
 database=db
----
 
 
 
