--- a/12-08.md
+++ b/12-08.md
@@ -35,13 +35,13 @@
 **2.2 - написать скрипт резервного копирования**
 
 
-#!/bin/sh
-PATH=/etc:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
-PGPASSWORD=password
-export PGPASSWORD
-pathB=/backup
-dbUser=dbuser
-database=db
++#!/bin/sh
++PATH=/etc:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
++PGPASSWORD=password
++export PGPASSWORD
++pathB=/backup
++dbUser=dbuser
++database=db
 
 
 
