--- a/12-08.md
+++ b/12-08.md
@@ -27,11 +27,11 @@
 
 Приведите ответ в свободной форме.
 
-**2.1  
+**2.1**  
   
-  **pg_dump -Fc dbname > filename
+  **pg_dump -Fc dbname > filename** создание
 
-  **pg_restore -d dbname filename
+  **pg_restore -d dbname filename** восстановление
 
 
 **2.2 - написать скрипт резервного копирования**
