--- a/12-08.md
+++ b/12-08.md
@@ -14,9 +14,9 @@
 
 Приведите ответ в свободной форме.
 
-**+ 1.1 Diff Backup дифиреницальное резервное копирование, или полное.
-**+ 1.2 incremental backup инкрементное копирование
-**+ 1.3 Сервер с репликацией master-slave**
++ 1.1 Diff Backup дифиреницальное резервное копирование, или полное.
++ 1.2 incremental backup инкрементное копирование
++ 1.3 Сервер с репликацией master-slave
 
 Задание 2. PostgreSQL
 
