--- a/12-08.md
+++ b/12-08.md
@@ -48,9 +48,19 @@
 
 
 Задание 3. MySQL
+
+
 3.1. С помощью официальной документации приведите пример команды инкрементного резервного копирования базы данных MySQL.
 
-3.1.* В каких случаях использование реплики будет давать преимущество по сравнению с обычным резервным копированием?
+
++ mysqlbackup --defaults-file=/home/dbadmin/my.cnf \
++  --incremental --incremental-base=history:last_backup \
++  --backup-dir=/home/dbadmin/temp_dir \
++  --backup-image=incremental_image1.bi \
++   backup-to-image
+
+
+3.2.* В каких случаях использование реплики будет давать преимущество по сравнению с обычным резервным копированием?
 
 Приведите ответ в свободной форме.
 
