--- a/12-08.md
+++ b/12-08.md
@@ -15,7 +15,13 @@
 Приведите ответ в свободной форме.
 
 + 1.1 Diff Backup дифиреницальное резервное копирование, или полное.
+
+Для восстановления требуется всего два слепка резервной копии, также выше скорость восстановления по сравнению с полным и инкрементом.
+
 + 1.2 incremental backup инкрементное копирование
+
+Инкремент позволяет быстро откатить   
+
 + 1.3 Сервер с репликацией master-slave
 
 Задание 2. PostgreSQL
