--- a/12-08.md
+++ b/12-08.md
@@ -16,11 +16,11 @@
 
 + 1.1 Diff Backup дифиреницальное резервное копирование, или полное.
 
-Для восстановления требуется всего два слепка резервной копии, также выше скорость восстановления по сравнению с полным и инкрементом.
+Для восстановления требуется всего два слепка резервной копии, также выше скорость восстановления по сравнению с инкрементным.
 
 + 1.2 incremental backup инкрементное копирование
 
-Инкремент позволяет быстро откатить   
+Инкрементное резервное копирование можно выполнять часто, так-как требуется не так много места в сравнении с полным резервным копированием. Используя инкрементное копирование сохраняются только копии последних изменений.
 
 + 1.3 Сервер с репликацией master-slave
 
